# gplugin

./: .hgignore  .hgtags  CMakeLists.txt  ChangeLog  Debian.md  HACKING  INSTALL  README  gidbits.pc.in  gplugin-uninstalled.pc.in  gplugin.pc.in
cmake/Modules/: GObjectIntrospection.cmake  Gettextize.cmake  PkgConfigVariable.cmake  help2man.cmake
cmake/Toolchains/: cygwin-mingw.cmake
debian/: changelog
gidbits/: CMakeLists.txt  gidbits-core.c  gidbits-core.h  gidbits-enums.c.template  gidbits-enums.h.template  gidbits-native-plugin-loader.c  gidbits-native-plugin-loader.h  gidbits-native-plugin.c  gidbits-native-plugin.h  gidbits-plugin-loader.c  gidbits-plugin-loader.h  gidbits-plugin-manager.c  gidbits-plugin-manager.h  gidbits-plugin.c  gidbits-plugin.h  gidbits-plugins.c  gidbits-plugins.h  gidbits-private.h  gidbits-version.h.in  gidbits.h.in
gir/: CMakeLists.txt
gjs/: CMakeLists.txt  gplugin-gjs-core.c  gplugin-gjs-loader.c  gplugin-gjs-loader.h  gplugin-gjs-plugin.c  gplugin-gjs-plugin.h
gjs/tests/: CMakeLists.txt  test-gjs-loader.c
gjs/tests/plugins/: basic.js  dependent.js  load-exception.js  load-failed.js  unload-failed.js
gplugin/: CMakeLists.txt  gplugin-core.c  gplugin-core.h  gplugin-enums.c.tmpl  gplugin-enums.h.tmpl  gplugin-file-tree.c  gplugin-loader-tests.c  gplugin-loader-tests.h  gplugin-loader.c  gplugin-loader.h  gplugin-manager.c  gplugin-manager.h  gplugin-marshallers.list  gplugin-native-loader.c  gplugin-native-loader.h  gplugin-native-plugin-loader.c  gplugin-native-plugin-loader.h  gplugin-native-plugin.c  gplugin-native-plugin.h  gplugin-native-private.h  gplugin-native.h.in  gplugin-options.c  gplugin-options.h  gplugin-plugin-implementation.c  gplugin-plugin-implementation.h  gplugin-plugin-info.c  gplugin-plugin-info.h  gplugin-plugin-loader.c  gplugin-plugin-loader.h  gplugin-plugin-manager.c  gplugin-plugin-manager.h  gplugin-plugin.c  gplugin-plugin.h  gplugin-private.c  gplugin-private.h  gplugin-query.c  gplugin-version.c  gplugin-version.h.in  gplugin.h.in
gplugin-gtk/: CMakeLists.txt  gplugin-gtk-manager.c  gplugin-gtk-manager.h  gplugin-gtk-plugin-info.c  gplugin-gtk-plugin-info.h  gplugin-gtk-private.c  gplugin-gtk-private.h  gplugin-gtk-store.c  gplugin-gtk-store.h  gplugin-gtk-view.c  gplugin-gtk-view.h  gplugin-gtk-viewer.c  gplugin-gtk.h.in
gplugin/tests/: CMakeLists.txt  test-bind-local.c  test-dynamic-type.c  test-id-collision.c  test-load-on-query.c  test-loader.c  test-native-loader.c  test-option-group.c  test-plugin-info.c  test-plugin-manager-paths.c  test-signals.c  test-unresolved-symbol.c  test-version-compare.c  test-versioned-dependencies.c
gplugin/tests/bad-plugins/: load-error.c  query-error.c  unload-error.c
gplugin/tests/bind-local/: bind-local.c
gplugin/tests/dynamic-type/: dynamic-test.h  dynamic-type-provider.c  dynamic-type-user.c
gplugin/tests/id-collision/: id-collision1.c  id-collision2.c
gplugin/tests/load-fail/: load-on-query-fail.c
gplugin/tests/load-on-query-fail/: load-on-query-fail.c
gplugin/tests/load-on-query-pass/: load-on-query-pass.c
gplugin/tests/plugins/: CMakeLists.txt  basic-plugin.c  broken-dependent-plugin.c  dependent-plugin.c  load-exception.c  load-failed.c  load-on-query.c  multiple-authors.c  unload-failed.c
gplugin/tests/versioned-dependencies/: bar.c  baz.c  exact1.c  exact2.c  fez.c  greater-equal.c  greater.c  less-equal.c  less.c  no-version.c  super-dependent.c
gplugin/utils/: CMakeLists.txt  gplugin-file-tree.h
lua/: CMakeLists.txt  gplugin-lua-core.c  gplugin-lua-loader.c  gplugin-lua-loader.h  gplugin-lua-plugin.c  gplugin-lua-plugin.h  gplugin-lua-test-lgi.c
lua/tests/: CMakeLists.txt  test-lua-loader.c  test-lua-moon-loader.c
lua/tests/plugins/: basic.lua  basic.lua.orig  basic.moon  dependent.lua  dependent.moon  load-exception.lua  load-exception.moon  load-failed.lua  load-failed.moon  unload-failed.lua  unload-failed.moon
packaging/debian/: changelog  control  copyright  gir1.2-gplugin-0.0.install  gir1.2-gplugin-0.0.install.in  gir1.2-gplugin0.0.install  libgplugin-0.postrm  libgplugin-dev.install  libgplugin-dev.install.in  libgplugin-gjs.install  libgplugin-gjs.lintian-overrides  libgplugin-gtk-bin.install  libgplugin-gtk-dev.install  libgplugin-gtk-dev.install.in  libgplugin-gtk.install  libgplugin-gtk0.install  libgplugin-gtk0.install.in  libgplugin-gtk0.symbols  libgplugin-lua.install  libgplugin-lua.install.in  libgplugin-lua.lintian-overrides  libgplugin-python.install  libgplugin.install  (+10 more)
perl/: CMakeLists.txt  gplugin-perl-core.c  gplugin-perl-loader.c  gplugin-perl-loader.h  gplugin-perl-plugin-loader.c  gplugin-perl-plugin-loader.h  gplugin-perl-plugin.c  gplugin-perl-plugin.h
perl/tests/plugins/: basic.pl
plugins/: CMakeLists.txt  gplugin-license-check.c
python/: CMakeLists.txt  gplugin-python-core.c  gplugin-python-loader.c  gplugin-python-loader.h  gplugin-python-plugin-loader.c  gplugin-python-plugin-loader.h  gplugin-python-plugin.c  gplugin-python-plugin.h  gplugin-python-test-pygobject.c  gplugin-python-utils.c  gplugin-python-utils.h
python/tests/: CMakeLists.txt  test-python-loader.c  test-python-utils.c
python/tests/plugins/: basic.py  dependent.py  load-exception.py  load-failed.py  unload-failed.py
seed/: CMakeLists.txt  gplugin-seed-core.c  gplugin-seed-loader.c  gplugin-seed-loader.h  gplugin-seed-plugin.c  gplugin-seed-plugin.h
seed/tests/: CMakeLists.txt  test-seed-loader.c
seed/tests/plugins/: basic.js  dependent.js  load-exception.js  load-failed.js  unload-failed.js
tests/: CMakeLists.txt  gtester-junit.xsl  test-boxed-types.c  test-core.c  test-native-loader.c  test-paths.c  test-plugin-info.c  test-plugin-manager-paths.c  test-plugin.c  test-signals.c  test-version-compare.c
tests/bad-plugins/: CMakeLists.txt  load-error.c  query-error.c  unload-error.c
tests/id-collision/: id-collision1.c  id-collision2.c
tests/load-fail/: load-on-query-fail.c
tests/plugins/: CMakeLists.txt  basic-plugin.c  broken-dependent-plugin.c  dependent-plugin.c  load-on-query.c  multiple-authors.c
